76022556: Firefox - overlap and validation issue

--- a/wp-content/themes/freelanceengine/css/custom.css
+++ b/wp-content/themes/freelanceengine/css/custom.css
@@ -5300,9 +5300,9 @@ b.currency  {
         position:  relative;
 }
 .step-content-wrapper .fa-exclamation-triangle  {
-        position:  absolute;
-        top:  15px;
-        right:  55px;
+    position: absolute;
+    top: 18px;
+    right: 70px;
 }
 .step-content-wrapper .message  {
         text-align:  right;
@@ -6553,6 +6553,15 @@ color: white;
 }
 .mce-path {
     display: none !important;
+}
+.mce-wordcount {
+    position: absolute;
+    top: 7px!important;
+    right: 0;
+    padding: 8px;
+}
+.wp-editor-container .fa-exclamation-triangle{
+    display: none;
 }
 .btn-skip-custom{
     padding: 5px 24px;
